--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                  'experiment1_button':
                        '<input type="button" value="Click me, OR ELSE" onclick="ga(\'send\', \'event\', \'buttonclick\', \'stern\'); alert(\'You will be spared.\');">'
              }
+             {
+                 name: 'variant3',
+                 'experiment1_text': 'I would really like it if you clicked this button!',
+                 'experiment1_button':
+                       '<input type="button" value="PLEASE" onclick="ga(\'send\', \'event\', \'buttonclick\', \'stern\'); alert(\'I appreciate you!\');">'
+             }
          ]
      });
      ga('send', 'pageview');
