--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 
         <form class="experiment1_button">
             This will be replaced too, with a button for the form
-                
         <form class="experiment2_button">
             This will be replaced too, with a button for the form
         </form>
@@ -47,9 +46,8 @@
                  name: 'variant3',
                  'experiment1_text': 'I would really like it if you clicked the first button! But not the second one',
                  'experiment1_button':
-                       '<input type="button" value="PLEASE" onclick="ga(\'send\', \'event\', \'buttonclick\', \'sayPlease\'); alert(\'I appreciate you!\');">'
+                       '<input type="button" value="PLEASE" onclick="ga(\'send\', \'event\', \'buttonclick\', \'sayPlease\'); alert(\'I appreciate you!\');">',
                  'experiment2_button':
-                 'experiment1_button':
                        '<input type="button" value="Do NOT click" onclick="ga(\'send\', \'event\', \'buttonclick\', \'badbutton\'); alert(\'You should not do that!\');">'
              }
          ]
